--- a/src/main/resources/templates/task/status-update.html
+++ b/src/main/resources/templates/task/status-update.html
@@ -55,7 +55,7 @@
                                                 <div class="form-group">
                                                     <label>Assigned Employee</label>
                                                     <select th:field="*{assignedEmployee}" name="assignedemployee"
-                                                            class="custom-select" readonly>
+                                                            class="custom-select">
                                                         <option th:value="${task.assignedEmployee.userName}"
                                                                 th:text="${task.assignedEmployee.firstName +' '+ task.assignedEmployee.lastName}"></option>
                                                     </select>
